// Copyright 2020 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.zond.v1alpha1;

import "proto/zond/ext/options.proto";
import "proto/qrysm/v1alpha1/attestation.proto";
import "proto/qrysm/v1alpha1/withdrawals.proto";
import "proto/engine/v1/execution_engine.proto";

option csharp_namespace = "TheQRL.Zond.v1alpha1";
option go_package = "github.com/theQRL/qrysm/v4/proto/qrysm/v1alpha1;zond";
option java_multiple_files = true;
option java_outer_classname = "BeaconBlockProto";
option java_package = "org.theqrl.zond.v1alpha1";
option php_namespace = "TheQRL\\Zond\\v1alpha1";

message GenericSignedBeaconBlock {
    oneof block {
        // Representing a signed, post-Capella fork beacon block.
        SignedBeaconBlockCapella capella = 1;

        // Representing a signed, post-Capella fork blinded beacon block.
        SignedBlindedBeaconBlockCapella blinded_capella = 2;
    }
    bool is_blinded = 100;
    uint64 payload_value = 101;
}

message GenericBeaconBlock {
    oneof block {
        // Representing a post-Capella fork beacon block.
        BeaconBlockCapella capella = 1;

        // Representing a post-Capella fork blinded beacon block.
        BlindedBeaconBlockCapella blinded_capella = 2;
    }
    bool is_blinded = 100;
    uint64 payload_value = 101;
}

// Proposer slashings are proofs that a slashable offense has been committed by
// proposing two conflicting blocks from the same validator.
message ProposerSlashing {
    // First conflicting signed block header.
    SignedBeaconBlockHeader header_1 = 1;

    // Second conflicting signed block header.
    SignedBeaconBlockHeader header_2 = 2;
}

// Attestor slashings are proofs that a slashable offense has been committed by
// attesting to two conflicting pieces of information by the same validator.
message AttesterSlashing {
    // First conflicting attestation.
    IndexedAttestation attestation_1 = 1;

    // Second conflicting attestation.
    IndexedAttestation attestation_2 = 2;
}

// Deposit into the Ethereum consensus from the Zond deposit contract.
message Deposit {
    // DepositData that is encoded into a deposit signature.
    message Data {
        // 2592 byte Dilithium public key of the validator.
        bytes public_key = 1 [(theqrl.zond.ext.ssz_size) = "2592", (theqrl.zond.ext.spec_name) = "pubkey"];

        // A 32 byte hash of the withdrawal address public key.
        bytes withdrawal_credentials = 2 [(theqrl.zond.ext.ssz_size) = "32"];

        // Deposit amount in gwei.
        uint64 amount = 3;

        // 4595 byte signature from the validators public key.
        bytes signature = 4 [(theqrl.zond.ext.ssz_size) = "4595"];
    }
    // 32 byte roots in the deposit tree branch.
    repeated bytes proof = 1 [(theqrl.zond.ext.ssz_size) = "33,32"];

    Data data = 2;
}

// A message that represents a validator signaling that they want to voluntarily
// withdraw from the active validator set. The message does not contain a
// validator signature.
message VoluntaryExit {
    // The epoch on when exit request becomes valid.
    uint64 epoch = 1 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Epoch"];

    // Index of the exiting validator.
    uint64 validator_index = 2 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];
}

// The signed version of voluntary exit.
message SignedVoluntaryExit {
    // The unsigned voluntary exit itself.
    VoluntaryExit exit = 1;

    // Validator's 4595 byte signature
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

// Eth1Data represents references to the Zond deposit contract.
message Eth1Data {
    // The 32 byte deposit tree root for the last deposit included in this
    // block.
    bytes deposit_root = 1 [(theqrl.zond.ext.ssz_size) = "32"];

    // The total number of deposits included in the beacon chain since genesis
    // including the deposits in this block.
    uint64 deposit_count = 2;

    // The 32 byte block hash of the Zond execution block considered for deposit
    // inclusion.
    bytes block_hash = 3 [(theqrl.zond.ext.ssz_size) = "32"];
}

// A beacon block header is essentially a beacon block with only a reference to
// the beacon body as a 32 byte merkle tree root. This type of message is more
// lightweight than a full beacon block. The message does not contain
// a validator signature.
message BeaconBlockHeader {
    // Beacon chain slot that this block represents.
    uint64 slot = 1 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Slot"];

    // Validator index of the validator that proposed the block header.
    uint64 proposer_index = 2 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];

    // 32 byte merkle tree root of the parent ssz encoded block.
    bytes parent_root = 3 [(theqrl.zond.ext.ssz_size) = "32"];

    // 32 byte merkle tree root of the resulting ssz encoded state after processing this block.
    bytes state_root = 4 [(theqrl.zond.ext.ssz_size) = "32"];

    // 32 byte merkle tree root of the ssz encoded block body.
    bytes body_root = 5 [(theqrl.zond.ext.ssz_size) = "32"];
}

message SignedBeaconBlockHeader {
    // The unsigned beacon block header itself.
    BeaconBlockHeader header = 1;

    // 4595 byte Dilithium signature from the validator that produced this block header.
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

message IndexedAttestation {
    repeated uint64 attesting_indices = 1 [(theqrl.zond.ext.ssz_max) = "128"];

    AttestationData data = 2;

    repeated bytes signatures = 3 [(theqrl.zond.ext.ssz_size) = "?,4595", (theqrl.zond.ext.ssz_max) = "128"];
}

// The sync aggregate object for the beacon chain to track sync committee votes and to
// support light client infra.
message SyncAggregate {
    // Sync committee bits as Bitvector to track votes.
    bytes sync_committee_bits = 1 [(theqrl.zond.ext.ssz_size) = "sync_committee_bytes.size", (theqrl.zond.ext.cast_type) = "sync_committee_bits.type"];

    repeated bytes sync_committee_signatures = 2 [(theqrl.zond.ext.ssz_size) = "?,4595", (theqrl.zond.ext.ssz_max) = "sync_committee_bits.size"];
}

message SignedBeaconBlockCapella {
    // The unsigned beacon block itself.
    BeaconBlockCapella block = 1;

    // 4595 byte Dilithium signature from the validator that produced this block.
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

message BeaconBlockCapella {
    // Beacon chain slot that this block represents.
    uint64 slot = 1 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Slot"];

    // Validator index of the validator that proposed the block header.
    uint64 proposer_index = 2 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];

    // 32 byte root of the parent block.
    bytes parent_root = 3 [(theqrl.zond.ext.ssz_size) = "32"];

    // 32 byte root of the resulting state after processing this block.
    bytes state_root = 4 [(theqrl.zond.ext.ssz_size) = "32"];

    // The beacon block body.
    BeaconBlockBodyCapella body = 5;
}

message BeaconBlockBodyCapella {
    // The validators RANDAO reveal 4595 byte value.
    bytes randao_reveal = 1 [(theqrl.zond.ext.ssz_size) = "4595"];

    // A reference to the Zond execution chain.
    Eth1Data eth1_data = 2;

    // 32 byte field of arbitrary data. This field may contain any data and
    // is not used for anything other than a fun message.
    bytes graffiti = 3 [(theqrl.zond.ext.ssz_size) = "32"];

    // Block operations
    // Refer to spec constants at https://github.com/ethereum/consensus-specs/blob/dev/specs/phase0/beacon-chain.md#max-operations-per-block

    // At most MAX_PROPOSER_SLASHINGS.
    repeated ProposerSlashing proposer_slashings = 4 [(theqrl.zond.ext.ssz_max) = "16"];

    // At most MAX_ATTESTER_SLASHINGS.
    repeated AttesterSlashing attester_slashings = 5 [(theqrl.zond.ext.ssz_max) = "2"];

    // At most MAX_ATTESTATIONS.
    repeated Attestation attestations = 6 [(theqrl.zond.ext.ssz_max) = "128"];

    // At most MAX_DEPOSITS.
    repeated Deposit deposits = 7 [(theqrl.zond.ext.ssz_max) = "16"];

    // At most MAX_VOLUNTARY_EXITS.
    repeated SignedVoluntaryExit voluntary_exits = 8 [(theqrl.zond.ext.ssz_max) = "16"];

    // Sync aggregate object for the beacon chain to track sync committee votes.
    SyncAggregate sync_aggregate = 9;

    // Execution payload from the execution chain.
    theqrl.engine.v1.ExecutionPayloadCapella execution_payload = 10;

    // At most MAX_DILITHIUM_TO_EXECUTION_CHANGES.
    repeated SignedDilithiumToExecutionChange dilithium_to_execution_changes = 11 [(theqrl.zond.ext.ssz_max) = "16"];
}

message SignedBlindedBeaconBlockCapella {
    // The unsigned blinded beacon block itself.
    BlindedBeaconBlockCapella block = 1;

    // 4595 byte Dilithium signature from the validator that produced this blinded block.
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

message BlindedBeaconBlockCapella {
    // Beacon chain slot that this blinded block represents.
    uint64 slot = 1 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.Slot"];

    // Validator index of the validator that proposed the block header.
    uint64 proposer_index = 2 [(theqrl.zond.ext.cast_type) = "github.com/theQRL/qrysm/v4/consensus-types/primitives.ValidatorIndex"];

    // 32 byte root of the parent block.
    bytes parent_root = 3 [(theqrl.zond.ext.ssz_size) = "32"];

    // 32 byte root of the resulting state after processing this blinded block.
    bytes state_root = 4 [(theqrl.zond.ext.ssz_size) = "32"];

    // The blinded beacon block body.
    BlindedBeaconBlockBodyCapella body = 5;
}

message BlindedBeaconBlockBodyCapella {
    // The validators RANDAO reveal 4595 byte value.
    bytes randao_reveal = 1 [(theqrl.zond.ext.ssz_size) = "4595"];

    // A reference to the Zond execution client.
    Eth1Data eth1_data = 2;

    // 32 byte field of arbitrary data. This field may contain any data and
    // is not used for anything other than a fun message.
    bytes graffiti = 3 [(theqrl.zond.ext.ssz_size) = "32"];

    // At most MAX_PROPOSER_SLASHINGS.
    repeated ProposerSlashing proposer_slashings = 4 [(theqrl.zond.ext.ssz_max) = "16"];

    // At most MAX_ATTESTER_SLASHINGS.
    repeated AttesterSlashing attester_slashings = 5 [(theqrl.zond.ext.ssz_max) = "2"];

    // At most MAX_ATTESTATIONS.
    repeated Attestation attestations = 6 [(theqrl.zond.ext.ssz_max) = "128"];

    // At most MAX_DEPOSITS.
    repeated Deposit deposits = 7 [(theqrl.zond.ext.ssz_max) = "16"];

    // At most MAX_VOLUNTARY_EXITS.
    repeated SignedVoluntaryExit voluntary_exits = 8 [(theqrl.zond.ext.ssz_max) = "16"];

    // Sync aggregate object for the beacon chain to track sync committee votes.
    SyncAggregate sync_aggregate = 9;

    // Execution payload header from the execution chain.
    theqrl.engine.v1.ExecutionPayloadHeaderCapella execution_payload_header = 10;

    // At most MAX_DILITHIUM_TO_EXECUTION_CHANGES. 
    repeated SignedDilithiumToExecutionChange dilithium_to_execution_changes = 11 [(theqrl.zond.ext.ssz_max) = "16"];
}

message ValidatorRegistrationV1 {
    bytes fee_recipient = 1 [(theqrl.zond.ext.ssz_size) = "20"];
    uint64 gas_limit = 2;
    uint64 timestamp = 3;
    bytes pubkey = 4 [(theqrl.zond.ext.ssz_size) = "2592"];
}

message SignedValidatorRegistrationsV1 {
    repeated SignedValidatorRegistrationV1 messages = 1;
}

message SignedValidatorRegistrationV1 {
    ValidatorRegistrationV1 message = 1 ;
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}

message BuilderBidCapella {
    theqrl.engine.v1.ExecutionPayloadHeaderCapella header = 1 ;
    bytes value = 2 [(theqrl.zond.ext.ssz_size) = "32"];
    bytes pubkey = 3 [(theqrl.zond.ext.ssz_size) = "2592"];
}

message SignedBuilderBidCapella {
    BuilderBidCapella message = 1 ;
    bytes signature = 2 [(theqrl.zond.ext.ssz_size) = "4595"];
}